# tmux

./: .clang-format-openbsd  .gitignore  Makefile.am  README  capture-hint.c  capture-hint.h  capture-pattern.c  capture-pattern.h  cmd-capture-mode.c  cmd-capture-pane.c  cmd.c  configure.ac  crash-log.c  crash-log.h  format.c  git-version.sh  grid-reader.c  grid-rust.c  grid-view.c  grid.c  input.c  key-bindings.c  log.c  screen-write.c  screen.c  server.c  session.c  tmux.1  tmux.c  tmux.h  tty-draw.c  version-format.c  version-format.h  window-copy.c
analysis/: version-git-hash.md
docs/: DEBUGGING.md  README.md  capture-mode.md  crash-log.md  grid-core-rust.md  upstream-fixes.md
docs/bugfix/: session-renumber-lastw-cycle.md
examples/: colored-hyperlink.sh
test/: test_crash_ring.c  test_hint.c  test_pattern.c  test_renumber_hang.sh  test_version.c
tmux-rs/: Cargo.toml
tmux-rs/difftest/: difftest.c  difftest.sh  stubs.c
tmux-rs/grid-core/: Cargo.toml
tmux-rs/grid-core-ffi/: Cargo.toml
tmux-rs/grid-core-ffi/src/: lib.rs
tmux-rs/grid-core-ffi/tests/: abi.rs
tmux-rs/grid-core/src/: cell.rs  codec.rs  grid.rs  lib.rs
tmux-rs/grid-core/tests/: behavior.rs  reflow.rs
